--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     
 
-    <link rel="stylesheet" href="https://github.com/Janmejaya777/Astrotask/blob/main/style.css"> 
+    <link rel="stylesheet" href="Astrostyle.css"> 
 <div class="row">
     <div class="column" style="margin-top: 46.35px">
         <h2 style="text-align: center; color: blue;">ASTRONITR</h2>
